hphp/test/zend/good/Zend/tests/bug64660.php.expectf

Fatal error: A semicolon (';') is expected here. in %s/bug64660.php on line 17293
